--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,9 +31,10 @@
     "dotenv": "^16.0.3",
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "mongoose-paginate-v2": "^1.9.1",
