--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,6 +35,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "mongoose-paginate-v2": "^1.9.1",
