--- a/Backend/package.json
+++ b/Backend/package.json
@@ -41,6 +41,7 @@
     "mongoose-paginate-v2": "^1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
